# orchestrate

./: README.markdown  orchestrate.cabal  soundflow.cabal
meristem/bugs/: chopped note  doubly mapped input  playback mid-stop  recording playback  remap held  simultaneous record and playback  stack overflow  sticky harmonies
meristem/improvements/: cross-instrument harmonies  harmony velocity  input transformations  macros  metronome  more memory tests  more powerful remapping  multi-intsrument devices  multiple recordings  multiple same notes  playback  remapping  save tracks  selective recording  track visualization  unify input events
meristem/improvements/gui/: show instrument availability
scripts/: build.sh  common.sh  issues.sh  pre-commit.sh  test.sh
src/: Config.hs  Input.hs  Logic.hs  Main.hs  TestMain.hs  TrackMemory.hs  Translator.hs  Types.hs
src/Control/Concurrent/: Mutex.hs
src/Control/Stream/: Input.hs  Util.hs
src/Data/: Bimap.hs  KVP.hs  Multimap.hs  SplitQueue.hs  Trie.hs
src/Data/Conduit/: Extra.hs
src/Logic/: Memory.hs  Sequential.hs
src/Main/: Graphics.hs  Input.hs
src/Storage/: Bimap.hs  KVP.hs  Multimap.hs  SplitQueue.hs  Trie.hs
src/Translator/: Keyboard.hs
test/: ConduitTest.hs  LogicTest.hs  Main.hs  Test.hs  TestMain.hs  TranslatorTest.hs  Trie.hs
test/TranslatorTest/: Keyboard.hs
