Name:                orchestrate
Version:             0.2.3
Description:         Powerful, flexible music creation
Category:            Music
License:             MIT
Author:              Ben Foppa
Maintainer:          benjamin.foppa@gmail.com
Build-Type:          Simple
Cabal-Version:       >= 1.9.2

executable orchestrate
    hs-source-dirs: src
    Main-is:        Main.hs
    GHC-Options:    -Wall -threaded -rtsopts=all

    Build-Depends:
                    basic-prelude == 0.3.*,
                    conduit == 1.1.*,
                    containers == 0.5.*,
                    extensible-effects == 1.4.*,
                    game-wrappers == 0.5.*,
                    open-union == 0.0.*,
                    midi-effect == 0.10.*,
                    lens == 4.1.*,
                    mtl == 2.1.*,
                    QuickCheck,
                    refcount == 0.1.* && >= 0.1.2,
                    StateVar,
                    stm == 2.4.*,
                    stm-conduit == 2.4.*,
                    text,
                    transformers == 0.3.*,
                    unordered-containers == 0.2.*,
                    vector == 0.10.*,
                    base

test-suite Tests
    type:           exitcode-stdio-1.0
    hs-source-dirs: test src
    main-is:        TestMain.hs
    GHC-Options:    -Wall -fno-warn-missing-signatures

    build-depends:
                    basic-prelude,
                    conduit,
                    containers,
                    extensible-effects,
                    game-wrappers,
                    HUnit == 1.2.5.*,
                    lens,
                    midi-effect,
                    open-union,
                    QuickCheck >= 2.6 && < 2.8,
                    refcount,
                    stm,
                    stm-conduit,
                    test-framework-quickcheck2 == 0.3.*,
                    test-framework-hunit == 0.3.*,
                    test-framework-th,
                    test-framework,
                    text,
                    transformers,
                    unordered-containers,
                    vector,
                    Cabal,
                    base
