Name:                Soundflow
Version:             0.2
Description:         Flexible MIDI music developer
Category:            Music
License:             BSD3
Author:              Ben Foppa
Maintainer:          benjamin.foppa@gmail.com
Build-Type:          Simple
Cabal-Version:       >= 1.9.2

Executable Soundflow
    hs-source-dirs: src/
    Main-is:        Main.hs
    GHC-Options:    -Wall -Werror -threaded -rtsopts=all

    Build-Depends: 
                    Summit == 0.13,
                    Game-Wrappers == 0.2,
                    QuickCheck >= 2,
                    midi-monad == 0.5,
                    base

test-suite Tests
    type:           exitcode-stdio-1.0
    hs-source-dirs: src/
    main-is:        TestMain.hs
    GHC-Options:    -Wall -Werror

    build-depends:
                    QuickCheck >= 2,
                    Summit,
                    HUnit,
                    Game-Wrappers,
                    midi-monad,
                    test-framework-quickcheck2,
                    test-framework-hunit,
                    test-framework-th,
                    test-framework,
                    Cabal,
                    base
