Name:                Soundflow
Version:             0.2.1
Description:         Flexible MIDI music developer
Category:            Music
License:             MIT
Author:              Ben Foppa
Maintainer:          benjamin.foppa@gmail.com
Build-Type:          Simple
Cabal-Version:       >= 1.9.2

Executable Soundflow
    hs-source-dirs: src/
    Main-is:        Main.hs
    GHC-Options:    -Wall -Werror -threaded -rtsopts=all

    Build-Depends:
                    Summit == 0.15,
                    Game-Wrappers == 0.2,
                    imidi == 0.7,
                    extensible-effects == 1.2.*,
                    QuickCheck >= 2,
                    vector,
                    base

test-suite Tests
    type:           exitcode-stdio-1.0
    hs-source-dirs: src/
    main-is:        TestMain.hs
    GHC-Options:    -Wall -Werror

    build-depends:
                    Summit,
                    Game-Wrappers,
                    imidi,
                    HUnit,
                    QuickCheck >= 2,
                    vector,
                    test-framework-quickcheck2,
                    test-framework-hunit,
                    test-framework-th,
                    test-framework,
                    Cabal,
                    base
